--- a/src/components/statewise.css
+++ b/src/components/statewise.css
@@ -1,11 +1,24 @@
 .table tr td:hover{
-    background-color: rgb(231, 81, 81);
+    background-color: rgb(139, 120, 120);
+    color: white;
 }
 .tableBody:hover{
     background: rgb(145, 128, 128);;
 
 }
+#deaths:hover{
+    background-color: rgb(221, 56, 56);
+}
+#active:hover{
+    background-color: rgb(221, 56, 56);
+}
+#recovered:hover{
+    background-color: rgb(24, 119, 64);
+}
 .table thead tr th{
     background-color: rgb(97, 89, 89);
     color: rgb(250, 247, 241);
+}
+#totaltable{
+    border: 1px solid black;
 }
